--- a/css/style.css
+++ b/css/style.css
@@ -1232,7 +1232,7 @@ form label {
 
 .btn-outline {
   background: none;
-  border: 2px solid rgb(255, 255, 255);
+  border: 2px solid gray;
   font-size: 16px;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
