--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html,body {
 }
 
 body {
-  background: url("/images/background.jpg");
+  background: url("images/background.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
