--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* main */
 * {
-  color: rgb(124, 124, 124);
+  color: white;
   margin: 0;
   padding: 0;
   font-family: "Acrom";
@@ -17,7 +17,7 @@ html,body {
 }
 
 body {
-  background: url("images/background.jpg");
+  background: url("/img/wall.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
