--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,10 @@ html,body {
   padding: 0;
 }
 
-body {
-  background: url("/img/wall.jpg");
+div {
+  background: url("img/background.jpg");
+  background-size: 100% 100%;
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
 }
 
 p {
