--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html,body {
 }
 
 div {
-  background: url("img/background.jpg");
+  background: url("img/wall.jpg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
