--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* main */
 * {
-  color: rgb(112, 112, 112);
+  color: white;
   margin: 0;
   padding: 0;
   font-family: "Acrom";
@@ -16,10 +16,12 @@ html,body {
   padding: 0;
 }
 
-div {
-  background: url("img/wall.jpg");
-  background-size: 100% 100%;
+body {
+  background: url("/img/wall.jpg");
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 p {
