--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html,body {
 }
 
 body {
-  background: url("/img/rojersback.png");
+  background: url("/img/rojersback.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
